--- a/recipe/meta.yaml
+++ b/recipe/meta.yaml
@@ -2,7 +2,7 @@
 
 package:
   name: thinkx
-  version:"{{ version }}
+  version: {{ version }}
 
 source:
   url: https://pypi.io/packages/source/t/thinkx/thinkx-{{ version }}.tar.gz
